# DRUGS_DATA

./: .gitignore  app.py  drug_database_search_api.py  drug_ddgs_search.py  drug_search_api.py  ensure_mongo_indexes.py  main.py  pyproject.toml  requirements.txt  run.py  run_parallel.py  scrapy.cfg  site_extractor.py  spider_generator.py
geometric_crawler/: config.py  fast_parser.py  geometry.py  items.py  middlewares.py  pipelines.py  repair.py  settings.py
geometric_crawler/spiders/: drug_spider.py  geometric_spider.py  medlineplus_gov_llm_spider.py  medlineplus_spider.py
